/*
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
*/
plugins {
    id 'java-library'
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'jacoco'
    id 'signing'
    id 'org.barfuin.gradle.taskinfo' version '2.2.1'
}

group = 'com.ibm.research.drl.dpt'
version = '7.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

ext {
    junit_jupiter_version = '5.14.3'
    junit_platform_launcher_version = '1.14.3'

    mockito_version = '5.21.0'
    jdefault_version = '2.0.0'
    hamcrest_version = '3.0'

    jackson_version = '2.20.1'

    log4j2_version = '2.25.2'

    commons_codec_version = '1.18.0'
    commons_csv_version = '1.14.1'
    commons_lang_version = '3.20.0'
    commons_math_version = '3.6.1'
    commons_text_version = '1.13.1'
    commons_validator_version = '1.10.1'
    pdfbox_version = '3.0.6'

    poi_version = "5.4.0"

    open_nlp_version = "2.2.0"
}

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        url = uri('https://www.dcm4che.org/maven2')
    }

    maven {
        name = "OSSRH"
        url = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
        credentials {
            username = providers.environmentVariable('OSSRH_USERNAME').getOrElse('')
            password = providers.environmentVariable('OSSRH_PASSWORD').getOrElse('')
        }
    }
}

dependencies {
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jackson_version}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jackson_version}"

    implementation "org.apache.commons:commons-lang3:${commons_lang_version}"
    implementation "org.apache.commons:commons-csv:${commons_csv_version}"
    implementation "org.apache.commons:commons-math3:${commons_math_version}"
    implementation "commons-validator:commons-validator:${commons_validator_version}"

    implementation "org.apache.logging.log4j:log4j-api:${log4j2_version}"
    implementation "org.apache.poi:poi-ooxml:${poi_version}"
    implementation "org.apache.pdfbox:pdfbox:${pdfbox_version}"

    implementation "ca.uhn.hapi:hapi-base:2.6.0"
    implementation "ca.uhn.hapi:hapi-structures-v22:2.6.0"
    implementation "ca.uhn.hapi:hapi-structures-v23:2.6.0"
    implementation 'org.iban4j:iban4j:3.2.11-RELEASE'

    implementation "org.apache.opennlp:opennlp-tools:${open_nlp_version}"

    testImplementation "org.apache.logging.log4j:log4j-core:${log4j2_version}"
    testImplementation "org.junit.jupiter:junit-jupiter:${junit_jupiter_version}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_jupiter_version}"
    testImplementation "org.mockito:mockito-core:${mockito_version}"
    testImplementation "org.hamcrest:hamcrest:${hamcrest_version}"
    testImplementation("org.beer30:jdefault:${jdefault_version}") {
        exclude group: "org.slf4j", module: "slf4j-simple"
    }

    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_launcher_version}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit_jupiter_version}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
    minHeapSize = "512m"
    maxHeapSize = "4g"

    testLogging {
        events 'failed'
        exceptionFormat 'short'

        showCauses true
        showExceptions true
        showStackTraces true
        showStandardStreams false
    }
}

tasks.register('sourcesJar', Jar) {
    from sourceSets.main.allJava
    archiveClassifier = "sources"
}

tasks.register('javadocJar', Jar) {
    dependsOn tasks.named('javadoc')
    from tasks.named('javadoc').map { it.destinationDir }
    archiveClassifier = "javadoc"
}

publishing {
    publications {
        mavenCentral(MavenPublication) {
            from components.java
            artifact tasks.named('sourcesJar')
            artifact tasks.named('javadocJar')
            pom {
                name = 'Data Privacy Toolkit'
                packaging = 'jar'
                description = 'The IBM Data Privacy Toolkit (DPT).'
                url = "https://github.com/IBM/data-privacy-toolkit"

                scm {
                    connection = "https://github.com/IBM/data-privacy-toolkit.git"
                    developerConnection = "https://github.com/IBM/data-privacy-toolkit.git"
                    url = "https://github.com/IBM/data-privacy-toolkit"
                }

                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }

                developers {
                    developer {
                        id = 'stefano'
                        name = 'Stefano Braghin'
                        email = 'stefanob@ie.ibm.com'
                    }
                    developer {
                        id = 'marco'
                        name = 'Marco Simioni'
                        email = 'marco.simioni@ibm.com'
                    }
                }
            }
        }
    }
    repositories {
        maven {
            name = "OSSRH"
            def releasesRepoUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
            def snapshotsRepoUrl = uri("https://oss.sonatype.org/content/repositories/snapshots/")
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl

            credentials {
                username = providers.environmentVariable('OSSRH_USERNAME').getOrElse('')
                password = providers.environmentVariable('OSSRH_PASSWORD').getOrElse('')
            }
        }
    }
}

signing {
    def signingKey = providers.environmentVariable('OSSRH_GPG_SECRET_KEY').orNull
    def signingPassword = providers.environmentVariable('OSSRH_GPG_SECRET_KEY_PASSWORD').orNull
    if (signingKey && signingPassword) {
        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.mavenCentral
    }
}

tasks.register('testCoverage', JacocoReport) {
    dependsOn tasks.named('test')
    group = "Reporting"
    description = "Generate Jacoco coverage reports for the test build."

    reports {
        html.required = true
        xml.required = true
        csv.required = false
    }

    def excludes = [
            '**/*Test*.*',
            '**/actions/*.*',
    ]

    def javaClasses = fileTree(dir: layout.buildDirectory.dir("classes/java/main"), excludes: excludes)
    classDirectories.from = files([javaClasses])

    sourceDirectories.from = files([
            "$project.projectDir/src/main/java",
    ])

    executionData.from = files(layout.buildDirectory.file("jacoco/test.exec"))
}
